# GiraffeMoor

./: .gitignore  CMakeLists.txt  GiraffeMoor.sln  GiraffeMoorConfig.h.in  README.md  all_actions.bat  build.bat  gen_and_build.bat  openVS.bat  open_VS.bat
GiraffeMoor/: GiraffeMoor.vcxproj  GiraffeMoor.vcxproj.filters
GiraffeMoor/src/: AnchorConstraint.cpp  AnchorConstraint.h  AuxFunctions.h  BoolTable.cpp  BoolTable.h  CADData.cpp  CADData.h  ConcentratedMass.h  Connectivity.cpp  Constraint.cpp  Contact.cpp  ConvergenceCriteria.cpp  ConvergenceCriteria.h  CoordinateSystem.cpp  CoordinateSystem.h  Cylinder.h  Displacement.cpp  Displacement.h  DisplacementField.cpp  DisplacementField.h  Dynamic.cpp  Element.cpp  Environment.cpp  Environment.h  Force.cpp  Force.h  GiraffeModel.cpp  GiraffeModel.h  IO.cpp  IO.h  Keypoint.cpp  Keypoint.h  Line.cpp  Line.h  LineConstraint.cpp  LineConstraint.h  LineSegment.cpp  LineSegment.h  Log.cpp  Log.h  (+85 more)
docs/languages/: GMoor-input.xml  GMoor-summary.xml  GiraffeMoor-input.xml  GiraffeMoor-summary.xml
inputs/500m/: 500m.sum
inputs/exemplo/: exemplo.gmr  exemplo.inp  exemplo.sum  exemplo.txt
inputs/fpso/: fpso.gmr
inputs/w_L300m_c09/: w_L300m_c09.gmr
scripts/: build_debug.bat  build_release.bat
src/: PCH.h  main.cpp
src/auxiliary/: AuxFunctions.h  BoolTable.cpp  BoolTable.h  ExternalTimeHistory.cpp  ExternalTimeHistory.h  IO.cpp  IO.h  Log.cpp  Log.h  LoopReading.h  MathCode.cpp  MathCode.h  Matrix.cpp  Matrix.h  Summary.cpp  Summary.h  Table.cpp  Table.h  WritingFlags.h
src/giraffe/: CADData.cpp  CADData.h  Constraint.cpp  Constraint.h  Contact.cpp  Contact.h  ConvergenceCriteria.cpp  ConvergenceCriteria.h  CoordinateSystem.cpp  CoordinateSystem.h  Displacement.cpp  Displacement.h  DisplacementField.cpp  DisplacementField.h  Dynamic.cpp  Dynamic.h  Element.cpp  Element.h  Environment.cpp  Environment.h  GiraffeModel.cpp  GiraffeModel.h  GiraffeSolver.cpp  GiraffeSolver.h  Load.cpp  Load.h  Monitor.cpp  Monitor.h  NSSS.cpp  NSSS.h  NodalConstraint.cpp  NodalConstraint.h  NodalDisplacement.cpp  NodalDisplacement.h  NodalForce.cpp  NodalForce.h  Node.cpp  Node.h  NodeSet.cpp  NodeSet.h  (+35 more)
src/gmoor/: AnchorConstraint.cpp  AnchorConstraint.h  ConcentratedMass.cpp  ConcentratedMass.h  Connectivity.h  Cylinder.cpp  Cylinder.h  GiraffeMoor.h  Keypoint.cpp  Keypoint.h  Line.cpp  Line.h  LineConstraint.cpp  LineConstraint.h  LineDisplacementField.cpp  LineDisplacementField.h  LineSegment.cpp  LineSegment.h  MoorConstraint.cpp  MoorConstraint.h  MoorEnvironment.cpp  MoorEnvironment.h  MoorLoad.cpp  MoorLoad.h  MoorPost.cpp  MoorPost.h  MoorSolution.cpp  MoorSolution.h  MooringModel.cpp  MooringModel.h  Platform.cpp  Platform.h  Seabed.cpp  Seabed.h  SegmentProperty.cpp  SegmentProperty.h  SegmentSet.cpp  SegmentSet.h  SineWaveDisplacement.cpp  SineWaveDisplacement.h  (+12 more)
